--- a/src/styles/_crumbs.scss
+++ b/src/styles/_crumbs.scss
@@ -39,19 +39,67 @@ button.go-up-fab {
   }
 }
 
+footer {
+  font-size: 1rem;
+
+  a {
+    color: white;
+    font-size: 1rem !important;
+    display: inline-block;
+
+    &:hover,
+    &:focus {
+      color: $theme-primary-v9;
+      transform: scale(1.05);
+    }
+  }
+
+  .container {
+    padding: 0 1.5rem;
+  }
+
+  [class*='Icon'] {
+    font-size: 1.5rem;
+  }
+
+  .social-media-links-wrapper {
+    margin-top: 1rem;
+
+    a {
+      margin-right: 1.75rem;
+      text-decoration: none;
+      transition: 0.2s;
+
+      &:hover,
+      &:focus {
+        transform: scale(1.2);
+      }
+    }
+
+    [class*='Icon'] {
+      font-size: 2rem;
+    }
+  }
+
+  .contact-info-container {
+    a,
+    span {
+      display: inline-block;
+      margin-bottom: 0.25rem;
+    }
+  }
+}
+
 .Footer-Wrapper-One {
-  // height: 10rem;
-  // background-color: $theme-primary-v5;
-  background: linear-gradient(to left, $theme-primary-v5, $theme-primary-v3);
+  padding: 2rem 0rem;
+  background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
 }
 
 .Footer-Wrapper-Two {
-  padding: 1.5rem 0 1rem 0;
+  padding: 0.75rem 0;
   color: #ffffff;
   text-align: left;
-  font-size: 0.8rem;
-  // background-color: $theme-primary-v4;
-  background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
+  background: linear-gradient(to left, $theme-primary-v3, $theme-primary-v1);
 }
 
 .Footer-Image {
