--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -2,9 +2,37 @@
   .drawer {
     display: none;
   }
+
+  @media screen and (max-width: 1152px) {
+    // Home page style(s)
+    .Home {
+      .splash-links-container {
+        left: calc(50vw - 31rem);
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 1023px) {
+  // Home page style(s)
+  .Home {
+    .splash-links-container {
+      left: 1vw;
+    }
+
+    .container {
+      padding: 0 1.5rem;
+    }
+  }
+
+  //Nav styles
+  .for-home {
+    .nav-links-wrapper {
+      padding: 0;
+    }
+  }
+
+  // misc styles(s)
   .container,
   .container-lg,
   .container-md,
@@ -34,6 +62,7 @@
 }
 
 @media screen and (max-width: 991px) {
+  //Contact style(s)
   .contact-info-col {
     padding: {
       left: 2.5rem;
@@ -106,11 +135,37 @@
 }
 
 @media screen and (max-width: 767px) {
+  //Home page style(s)
+  .Home {
+    .splash-wrapper {
+      display: none;
+    }
+  }
+
+  // misc style(s)
   .logo {
     font-size: 1.15rem;
   }
 
   //Nav styles
+  .for-home {
+    &.MuiAppBar-root {
+      .logo {
+        display: block;
+        text-shadow: 0.0625rem 0.0625rem 0.1rem rgba(0, 0, 0, 0.5);
+        margin-left: -0.25rem !important;
+
+        a {
+          color: white !important;
+        }
+
+        img {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+  }
+
   .top-nav-box {
     display: none;
   }
