--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -2,6 +2,62 @@
 
 $top-nav-box-height: 2.25rem;
 
+.for-home {
+  &.MuiAppBar-root {
+    background: none;
+    transition: 0s;
+    width: 100%;
+    left: 0;
+    box-shadow: none;
+
+    .logo {
+      display: none;
+    }
+
+    .top-nav-box {
+      display: none;
+    }
+  }
+
+  .nav-links-wrapper {
+    margin-top: 1.5rem;
+    background: rgba(90, 45, 0, 0.7);
+    padding: {
+      right: 0.75rem;
+      left: 0.75rem;
+    }
+    border-radius: 0.75rem;
+  }
+
+  .nav-link {
+    padding: {
+      top: 1.25rem;
+      bottom: 1.25rem;
+    }
+
+    &::after {
+      content: unset;
+    }
+  }
+
+  .nav-menu {
+    box-shadow: none;
+    background-color: transparent;
+    border-bottom: 0.125rem solid rgba(90, 45, 0, 0.7);
+    transform: translateY(1.5rem);
+    border-radius: 0 0 0.5rem 0.5rem;
+
+    a {
+      background: rgba(90, 45, 0, 0.7);
+
+      &:hover,
+      &:focus {
+        background: rgba(90, 45, 0, 0.95) !important;
+      }
+    }
+  }
+}
+
 .MuiAppBar-root {
   background-color: $theme-primary-v4;
   background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
@@ -62,11 +118,17 @@ $top-nav-box-height: 2.25rem;
     align-self: center;
   }
 
-  span:first-of-type {
+  span {
     display: inline-block;
-    margin-right: 0.25rem;
+    border-left: 0.125rem solid $theme-primary-v5;
+    margin-left: 0.25rem;
+    padding-left: 0.75rem;
+  }
+
+  span:first-of-type {
     padding-right: 0.75rem;
-    border-right: 1px solid $theme-primary-v5;
+    padding-left: 0;
+    border: none;
   }
 
   .social-media-links-wrapper {
@@ -128,7 +190,7 @@ $top-nav-box-height: 2.25rem;
   text-transform: capitalize !important;
   transition: 0.3s;
   position: relative;
- 
+
   &::before,
   &::after {
     position: absolute;
@@ -198,9 +260,9 @@ $top-nav-box-height: 2.25rem;
     color: white;
     display: inline-flex;
     justify-content: center;
-    height: 2.75rem;
+    height: 3.25rem;
     margin-left: 2rem;
-    padding: 1.25rem 1rem;
+    padding: 1.25rem;
     min-width: 6rem;
     border-radius: 0.45rem !important;
     align-self: center;
@@ -400,6 +462,7 @@ $top-nav-box-height: 2.25rem;
   .nav-link-wrapper {
     width: 100%;
     display: flex !important;
+    margin-bottom: 0.5rem;
 
     &:hover {
       .nav-link::before {
@@ -415,6 +478,8 @@ $top-nav-box-height: 2.25rem;
     padding: 0.85rem;
     margin: 0 0.5rem;
     margin-top: 0.5rem;
+    border-radius: 0.75rem !important;
+    background: rgba(65, 20, 0, 0.25);
 
     &.button {
       &:last-child {
@@ -487,13 +552,13 @@ $top-nav-box-height: 2.25rem;
 
   .top-nav-box {
     display: none;
-    margin: 8rem 0 3rem 0;
+    margin: 8rem 0 4rem 0;
     padding: 0.5rem 0;
   }
 
   .top-nav-wrapper {
     display: block;
-    background: #eee;
+    background: $theme-primary-v8;
     color: $theme-primary-v3;
     padding: 0.25rem 0 1rem 0;
 
@@ -503,6 +568,7 @@ $top-nav-box-height: 2.25rem;
       span {
         margin: 0.5rem 0;
         border: none;
+        padding-left: 0;
       }
 
       &:first-child {
