--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -135,7 +135,7 @@
     }
 
     &:nth-of-type(2) {
-      background-image: url('/images/pipes-fittings.jpg');
+      background-image: url('/images/pipes-fittings-two.jpg');
       animation-delay: 6s;
       z-index: -1;
     }
