--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -4,7 +4,6 @@
   min-height: 100vh;
   min-width: 100%;
   height: auto;
-  // @include debugger();
 
   .splash-wrapper {
     position: absolute;
@@ -39,13 +38,13 @@
       box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.5);
       border-radius: 0 0 2rem 2rem;
       transform: translateY(-100%);
-      animation: slideInTop 0.5s forwards ease 0.25s;
+      animation: slideInTop 0.5s forwards ease 0.75s;
     }
   }
 
   .splash-logo {
     opacity: 0;
-    animation: fadeIn 1.5s forwards ease 1s;
+    animation: fadeIn 1.5s forwards ease 1.5s;
 
     h5 {
       font-size: 1.25rem;
@@ -76,7 +75,7 @@
     padding: 2rem 1rem 1rem;
     opacity: 0;
     border-top: 0.125rem solid rgba(190, 140, 90, 0.75);
-    animation: fadeIn 1s forwards ease 2s;
+    animation: fadeIn 1s forwards ease 2.5s;
 
     * {
       color: $theme-primary-v9;
@@ -127,15 +126,16 @@
     height: 100%;
     width: 100%;
     background-size: cover;
+    background-position: right;
     animation: backgroundSlideIn 12s infinite forwards ease;
 
     &:nth-of-type(1) {
-      background-image: url('/images/switchgears.jpg');
+      background-image: url('/images/switch-gears-4.jpg');
       z-index: 0;
     }
 
     &:nth-of-type(2) {
-      background-image: url('/images/pipes-fittings-two.jpg');
+      background-image: url('/images/pipes-1.jpg');
       animation-delay: 6s;
       z-index: -1;
     }
