--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -146,6 +146,10 @@ a {
   font-size: 1rem;
 }
 
+.include-page-header {
+  @include page-header();
+}
+
 .logo {
   color: white !important;
   padding: 0.15em;
