--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -210,12 +210,7 @@ $white: #fff;
 
     &::before,
     &::after {
-      @include before-or-after-v2(
-        $w: 100vw,
-        $h: 25rem,
-        $bg: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2)
-      );
-      background-color: $theme-primary-v4;
+      @include before-or-after-v2($w: 100vw, $h: 25rem, $bg: $theme-primary-v2);
       clip-path: polygon(
         0 0,
         calc(50vw + 19rem) 0,
