--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -15,10 +15,11 @@ body,
 
 * {
   box-sizing: border-box;
-  font-family: 'Google Sans', 'Montserrat', 'Trebuchet MS', sans-serif !important;
+  font-family: 'Comfortaa', 'Montserrat', 'Trebuchet MS', sans-serif;
   outline: none !important;
   // border: 1px solid deeppink;
 }
+
 
 body {
   padding: 0 !important;
@@ -134,10 +135,12 @@ h4,
 h5,
 h6 {
   margin: 0;
+  font-family: 'Google Sans';
   // font-size: 1rem;
 
-  a {
+  * {
     font-size: inherit;
+    font-family: 'Google Sans';
   }
 }
 
@@ -155,6 +158,7 @@ a {
   padding: 0.15em;
   display: block;
   font-size: 1.25rem;
+  font-weight: 900;
   border-radius: 2rem;
   margin: 0.15rem 0 !important;
   min-width: 10rem;
