Make some fixes; Add hide nav drawer (side bar) onclick of nav item feature; Cleaned up.

--- a/src/styles/_Companies.scss
+++ b/src/styles/_Companies.scss
@@ -254,11 +254,14 @@ body.companies {
   // Specific Companies' style(s)
   .PipesAndFittings,
   .Switchgears {
+    position: relative;
+
     .page-title {
-      margin-top: 8.5rem;
+      margin-top: 14rem;
 
       &::before,
       &::after {
+        height: 27rem;
         clip-path: unset;
       }
     }
