--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -15,9 +15,8 @@ body,
 
 * {
   box-sizing: border-box;
-  font-family: 'Comfortaa', 'Montserrat', 'Trebuchet MS', sans-serif;
+  font-family: 'Comfortaa', 'Trebuchet MS', sans-serif !important;
   outline: none !important;
-  // border: 1px solid deeppink;
 }
 
 
@@ -37,11 +36,11 @@ body {
       }
 
       &::-webkit-scrollbar-track {
-        background: transparent;
+        background: $theme-primary-v6;
       }
 
       &::-webkit-scrollbar-thumb {
-        background: $theme-primary-v4 !important;
+        background: $theme-primary-v3 !important;
       }
     }
   }
@@ -80,9 +79,6 @@ a {
     color: $theme-primary-v2;
     text-decoration: underline;
   }
-  // &:visited {
-  //   color: $theme-primary-v9;
-  // }
 }
 
 button,
@@ -135,17 +131,36 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: 'Google Sans';
-  // font-size: 1rem;
+  font-family: 'Google Sans', 'Trebuchet MS', sans-serif !important;
+  line-height: 150%;
 
   * {
     font-size: inherit;
-    font-family: 'Google Sans';
+    font-family: 'Google Sans', 'Trebuchet MS', sans-serif !important;
   }
 }
 
-button,
-a {
+h1 {
+  font-size: 3.1rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+h4 {
+  font-size: 1.6rem;
+}
+
+h5 {
+  font-size: 1.3rem;
+}
+
+h6 {
   font-size: 1rem;
 }
 
@@ -194,6 +209,14 @@ a {
 
 .theme-color-bg {
   background-color: $theme-primary;
+}
+
+.text-bold {
+  font-weight: bold;
+}
+
+.text-shadow {
+  text-shadow: 0.0625rem 0.0625rem 0.1rem rgba(0, 0, 0, 0.5);
 }
 
 .text-center {
