possibly final finals

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,13 @@
-@import 'misc';
-@import 'Home';
-@import 'About';
-@import 'Nav';
-@import 'Contact';
-@import 'Companies';
-@import 'News';
-@import 'Products';
-@import 'Portfolio';
-@import 'crumbs';
-@import 'responsive';
-@import 'animation';
+@import "misc";
+@import "Home";
+@import "About";
+@import "Nav";
+@import "Gallery";
+@import "Contact";
+@import "Companies";
+@import "News";
+@import "Products";
+@import "Portfolio";
+@import "crumbs";
+@import "responsive";
+@import "animation";
