--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -1,114 +1,72 @@
-$products: (
-  "one": "/images/one.jpg",
-  "two": "/images/two.jpg",
-  "three": "/images/three.jpg",
-);
+@import 'constants';
 
-// @each $i, $image in $products {
-//   .Product-Wrapper-#{$i} {
-//     //   height: 30rem;
-//     padding-top: 2rem;
-//     padding-bottom: 2rem;
-//     width: 100%;
-//     background: linear-gradient(rgba(65, 20, 20, 0.5), rgba(31, 5, 5, 0.5)),
-//       url($image);
-//     object-fit: cover;
-//     background-position: center;
-//     line-height: 1.7;
-//     // filter: blur(.9em);
-//   }
-//   .Product-Image-#{$i} {
-//     background: url($image);
-//     height: 15rem;
-//     width: 15rem;
-//     margin: 1rem;
-//     object-fit: cover;
-//     background-position: center;
-//     border-radius: 50%;
-//     box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.3);
-//   }
-// }
+.Products {
+  .product {
+    // @include debugger();
 
-.Main-Wrapper {
-  width: 100% !important;
-  padding: 1em;
-  padding-top: 5em;
-  padding-bottom: 3em;
-}
+    position: relative;
+    min-height: 18rem;
+    height: 100%;
+    overflow: hidden;
+    background: {
+      size: cover;
+      position: center;
+    }
+    border-radius: 0.75rem;
+    box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
 
-.Product-Card {
-  // padding: 10px;
-  background-color: $white;
-  border-radius: 1rem;
-  transition: ease-in-out 0.3s;
-  height: 20rem;
-  box-shadow: 0px 0px 17px 4px rgba(0, 0, 0, 0.15);
-}
+    &:hover,
+    &:focus,
+    &:focus-within {
+      // transform: translateY(-0.5rem);
+      box-shadow: 0 0 3.5rem rgba(0, 0, 0, 0.5);
 
-// .Service-Card:hover {
-//   transform: scale(1.01);
-//   box-shadow: 0px 0px 17px 15px rgba(0, 0, 0, 0.09);
-// }
+      .product-details-wrapper {
+        transform: translateY(0);
 
-.Product-Desc {
-  visibility: hidden;
-  line-height: 1.5rem;
-  color: white;
-  font-size: 0.8rem;
-  transition: all 0.5s;
-}
+        .product-desc {
+          opacity: 1;
+        }
 
-.Product-Card:hover .Product-Desc {
-  line-height: 1.2rem;
-  visibility: visible;
-  text-overflow: ellipsis;
-  color: grey;
-}
-.Product-Image-Carousel {
-  // padding: 10px;
-  height: 70%;
-  // background-image: url($image);
-  // background-position: center;
-  object-fit: cover;
-  border-radius: 1rem 1rem 0rem 0rem;
-  overflow: hidden;
-
-  transition: all 0.5s;
-}
-
-.Product-Card:hover .Product-Image-Carousel {
-  height: 60%;
-}
-
-.Product-Carousel-Item {
-  object-fit: cover;
-  height: inherit !important;
-}
-
-@each $i, $image in $products {
-  .Product-Image-#{$i} {
-    // padding: 10px;
-    height: 70%;
-    background-image: url($image);
-    background-position: center;
-    object-fit: cover;
-    border-radius: 1rem 1rem 0rem 0rem;
-
-    transition: all 0.5s;
-  }
-  .Product-Image-#{$i}:hover {
-    // padding: 10px;
-    transform: scale(1.03);
-    background-position: center;
-    object-fit: cover;
+        .product-button {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
   }
 
-  .Product-Card:hover .Product-Image-#{$i} {
-    height: 60%;
+  .product-details-wrapper {
+    @extend .text-shadow;
+    padding: 1rem;
+    position: absolute;
+    color: white;
+    background: rgba($prim-r - 75, $prim-g - 75, $prim-b - 75, 0.75);
+    height: 100%;
+    font-size: 0.9rem;
+    transition: 0.25s;
+    transform: translateY(78%);
+
+    .product-desc {
+      opacity: 0;
+      transition: 0.4s;
+    }
+
+    .product-button {
+      border-radius: 0.5rem;
+      color: white;
+      border-color: white;
+      font-size: 0.9rem !important;
+      opacity: 0;
+      visibility: hidden;
+      transition: 0.3s;
+
+      &:hover,
+      &:focus {
+        border-color: transparent;
+        box-shadow: 0 0 1rem rgba(255, 255, 255, 0.5);
+      }
+    }
   }
-}
-
-
-.carousel-inner{
-  height: 100%;
 }
