--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import 'News';
 @import 'Products';
 @import 'Portfolio';
+@import 'Modal';
 @import 'crumbs';
 @import 'responsive';
 @import 'animation';
