--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -16,6 +16,23 @@ body.companies {
     .nav-menu a:hover {
       background: rgba(65, 20, 0, 0.95) !important;
     }
+
+    .nav-link-wrapper:last-child {
+      .nav-link {
+        border-color: white;
+
+        &::before {
+          opacity: 0;
+        }
+
+        &:hover,
+        &:focus {
+          &::before {
+            opacity: 1;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -43,7 +60,7 @@ body.companies {
     margin: {
       top: 1.5rem;
       bottom: 1.5rem;
-    };
+    }
     background: rgba(90, 45, 0, 0.7);
     padding: {
       right: 0.75rem;
@@ -598,11 +615,11 @@ body.companies {
   }
 
   .nav-menu {
-    left: 15%;
-    width: calc(85% - 0.95rem);
+    left: calc(15% + 0.35rem);
+    width: calc(85% - 1.25rem);
     min-width: unset;
     max-width: 85%;
-    top: calc(100% + 0.5rem);
+    top: calc(100% + 0.35rem);
     transform: translateY(0.75rem);
     z-index: 5;
 
@@ -673,9 +690,9 @@ body.companies {
   }
 
   .MuiDrawer-paper {
-    width: 75%;
+    width: 85%;
     overflow-x: hidden;
     background: linear-gradient(to left, $theme-primary-v4, $theme-primary-v2);
-    max-width: 22rem;
+    max-width: 24rem;
   }
 }
