--- a/src/styles/_Products.scss
+++ b/src/styles/_Products.scss
@@ -5,13 +5,16 @@
     // @include debugger();
 
     position: relative;
-    min-height: 18rem;
+    min-height: 20rem;
+    max-width: 19rem;
     height: 100%;
     overflow: hidden;
     background: {
-      size: cover;
+      size: contain;
       position: center;
+      repeat: no-repeat;
     }
+    margin: auto;
     border-radius: 0.75rem;
     box-shadow: 0 0 2.5rem rgba(0, 0, 0, 0.25);
     transition: 0.3s;
@@ -31,7 +34,6 @@
 
         .product-button {
           opacity: 1;
-          visibility: visible;
         }
       }
     }
@@ -42,11 +44,12 @@
     padding: 1rem;
     position: absolute;
     color: white;
-    background: rgba($prim-r - 75, $prim-g - 75, $prim-b - 75, 0.75);
+    background: rgba($prim-r - 75, $prim-g - 75, $prim-b - 75, 0.9);
+    width: 100%;
     height: 100%;
     font-size: 0.9rem;
     transition: 0.25s;
-    transform: translateY(78%);
+    transform: translateY(80%);
 
     .product-desc {
       opacity: 0;
@@ -59,7 +62,6 @@
       border-color: white;
       font-size: 0.9rem !important;
       opacity: 0;
-      visibility: hidden;
       transition: 0.3s;
 
       &:hover,
